# Major-in-Future

./: .gitignore  MANIFEST.md  README.md  cluster_local.py  job_sim.py  main.py  postprocess_embedding_variants.py  pyproject.toml  start_full_run.py
configs/llm/: llm_config.json
docs/: data_schema.md  publication_boundary.md  technical_pipeline.md
major/: gaokao_major_top10_questions.md  major_categories.md  major_category_fine_groups.csv  major_category_fine_groups.md  major_category_fine_groups_v2.csv  major_category_fine_groups_v2.md
scripts/: aggregate_agent_reasoning.py  aggregate_major_outlook_trends.py  build_final_major_reasoning_outputs.py  enrich_frontier_news_wikipedia.py  fix_future_news_months.py  merge_frontier_news_candidates.py  plot_combined_major_outlook_trends.py  plot_door_major_outlook_trends.py  plot_door_overall_outlook_trends.py  plot_fine_group_outlook_trends.py  plot_major_outlook_trends.py  run_llm_major_reasoning_analysis.py  run_major_outlook_survey.py  run_major_outlook_survey_by_group.py
