[project]
name = "job-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.8",
    "litellm>=1.40",
    "numpy>=1.26",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.4",
    "vllm>=0.18.0",
    "flash-attn",
    "sentence-transformers>=5.3.0",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
